# caca

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  FILE_STRUCTURE.md  README.md
ca/: cellular_automata.cpp
core/: error_handling.cpp
docs/: c_proposes_major_refator.md  claude_prompt.md  dif_todo.md  instructions.md  refactor_in_detail_[architectural_overview] .md
include/ca/: cellular_automata.hpp
include/monitoring/: progress_monitor.hpp
include/simd/: cpu_features.hpp  dispatcher.hpp
include/tests/: nist_tests.hpp  statistical_tests.hpp
monitoring/: progress_monitor.cpp
simd/: cpu_features.cpp  dispatcher.cpp
src/: main.cpp
tests/: CMakeLists.txt  nist_tests.cpp  statistical_tests.cpp
